Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Peter McCluskey (Nov 14, 2007)
  Applied xhtml patch from Zvi Har'El.

 Peter McCluskey (Oct 1, 2007)
  Changes from Fumihiro Kato to fix bugs on 64 bit systems and some
   possible buffer overflow problems.
  Change in rules about whether to escape urls; it now seems to escape them
   when found in the middle of the line the same way it has been doing when
   they are at the start of a line.

 Peter McCluskey (Feb 16, 2007)
  Changes from Rick van der Zwet:
   cosmetic = tweaking the interface a small bit (right align, the message 
   numbers, years in the date listing
   spamify-domain = obfuscate the body of the message as well (will also 
   obfuscate 'ssh rick@foo.bar' this of course), moved the domain obfuscate 
   yes/no to the general to make the function more portable
 Changes from Mike Fabian changing int to size_t.

 Peter McCluskey (Mar 27, 2006)
  Add rel="nofollow" to text message URLs (option txtsuffix = 1).

 Peter McCluskey (Mar 14, 2006)
  Fixed a core dump with linkquotes = 1 caused by Daigo's changes.

 Peter McCluskey (Sep 30, 2005)
  Fixed missing links at top when show_index_links is 1 or 3.

 Peter McCluskey (Aug 4, 2005)
  Fixed double counting of messages deleted with the delete_msgnum option,
  which sometimes caused top level index page to show wrong number of
  messages and not link to a folder.

 Peter McCluskey (Jul 29, 2005)
  Changed to sort on sender date rather than from date when displaying
  sender date as a result of use_sender_date = 1.

 Peter McCluskey (Jun 23, 2005)
  Some small changes from Vincent McIntyre to make date-range in index of
  folders link to default index page, to use CSS instead of <th> to
  distinguish that column, and some whitespace changes.
  Added explanation of how to handle strcasestr prototype error to INSTALL.

 Peter McCluskey (Mar 19, 2005)
  Fixes to files_by_thread option submitted by Oliver Meili.

 Peter McCluskey (Dec 2, 2004)